8326638: Crash in PhaseIdealLoop::remix_address_expressions due to unexpected Region instead of Loop